--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>注册-万彩吧_快3_11选5_快乐10分_3d_彩票开奖查询</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-  
+
     <script src="~/js/jquery-1.8.3.min.js"></script>
     <link href="~/css/dialog.css" rel="stylesheet" />
     <script src="~/js/dialog.min.js"></script>
@@ -132,52 +132,54 @@
         <a href="javascript:;" class="hjc_logo"><img src="~/images/03.png"></a>
         <a href="/Home/Login" class="hjc_login">登录</a>
     </header>
-   
-        <div class="DL_main">
-            <div class="DL_info1">
-                <ul class="DL_if1UL">
-                    <li>
-                        <p class="DL_icon DL_icon1 f-l"></p>
-                        <div class="UL_kuai1">
-                            <input type="text" id="mobile" placeholder="输入手机号" class="DL_ipt1">
-                        </div>
-                    </li>
 
-                    <li>
-                        <p class="DL_icon DL_icon4 f-l"></p>
-                        <div class="UL_kuai1">
-                            <input type="text" id="name" placeholder="输入昵称" class="DL_ipt1">
-                        </div>
-                    </li>
+    <div class="DL_main">
+        <div class="DL_info1">
+            <ul class="DL_if1UL">
+                <li>
+                    <p class="DL_icon DL_icon1 f-l"></p>
+                    <div class="UL_kuai1">
+                        <input type="text" id="mobile" placeholder="输入手机号" class="DL_ipt1">
+                    </div>
+                </li>
 
-                    <li>
-                        <p class="DL_icon DL_icon2 f-l"></p>
-                        <div class="UL_kuai1">
-                            <input type="password" id="password" placeholder="输入密码" class="DL_ipt1">
+                <li>
+                    <p class="DL_icon DL_icon4 f-l"></p>
+                    <div class="UL_kuai1">
+                        <input type="text" id="name" placeholder="输入昵称" class="DL_ipt1">
+                    </div>
+                </li>
+
+                <li>
+                    <p class="DL_icon DL_icon2 f-l"></p>
+                    <div class="UL_kuai1">
+                        <input type="password" id="password" placeholder="输入密码" class="DL_ipt1">
+                    </div>
+                </li>
+                <li>
+                    <p class="DL_icon DL_icon3 f-l"></p>
+                    <div class="UL_kuai1">
+                        <div class="DL_yzm f-l">
+                            <input type="text" id="vcode" placeholder="输入短信验证码" class="DL_ipt1">
                         </div>
-                    </li>
-                    <li>
-                        <p class="DL_icon DL_icon3 f-l"></p>
-                        <div class="UL_kuai1">
-                            <div class="DL_yzm f-l">
-                                <input type="text" id="vcode" placeholder="输入短信验证码" class="DL_ipt1">
-                            </div>
-                            <a href="javascript:;" id="sendMsg" class="DL_HQ f-r" >点击免费获取</a>
-                            <div style="clear:both;"></div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="DL_info2">
-                <input type="button" id="btnreg" class="DL_if2btn" value="注册">
-            </div>
-            <div class="DL_info5">
-                注册表明您已满18岁并同意<a href="javascript:;">《万彩吧服务协议》</a>
-            </div>
-            <!--<div class="DL_info4">
-                客服热线：<a href="javascript:;">4009-9798-38</a>&nbsp;&nbsp;&nbsp;<a href="javascript:;">在线客服</a>
-            </div>-->
+                        <a href="javascript:;" id="sendMsg" class="DL_HQ f-r">点击免费获取</a>
+                        <div style="clear:both;"></div>
+                    </div>
+                </li>
+            </ul>
         </div>
-   
+        <div class="DL_info2">
+            <input type="button" id="btnreg" class="DL_if2btn" value="注册">
+        </div>
+        <div class="DL_info5">
+            注册表明您已满18岁并同意<a href="javascript:;">《万彩吧服务协议》</a>
+        </div>
+        <!--<div class="DL_info4">
+            客服热线：<a href="javascript:;">4009-9798-38</a>&nbsp;&nbsp;&nbsp;<a href="javascript:;">在线客服</a>
+        </div>-->
+    </div>
+
 </body>
+
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
