--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/副本 Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/副本 Index.cshtml
@@ -94,38 +94,54 @@
 
     <div class="hjc_hdNav" style="position: fixed;">
         <ul class="hdNav_ul">
-            <li><a href="javascript:;">
+            <li>
+                <a href="javascript:;">
                     <i><img src="/images/grids_icon_01.png"></i>
                     <p>开奖</p>
-                </a></li>
-            <li><a href="javascript:;">
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
                     <i><img src="/images/grids_icon_02.png"></i>
                     <p>走势</p>
-                </a></li>
-            <li><a href="/Home/Plan">
+                </a>
+            </li>
+            <li>
+                <a href="/Home/Plan">
                     <i><img src="/images/grids_icon_03.png"></i>
                     <p>计划</p>
-                </a></li>
-            <li><a href="javascript:;">
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
                     <i><img src="/images/grids_icon_04.png"></i>
                     <p>排行</p>
-                </a></li>
-            <li><a href="javascript:;">
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
                     <i><img src="/images/grids_icon_05.png"></i>
                     <p>聊天</p>
-                </a></li>
-            <li><a href="javascript:;">
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
                     <i><img src="/images/grids_icon_06.png"></i>
                     <p>高手</p>
-                </a></li>
-            <li><a href="/News/Index/2">
+                </a>
+            </li>
+            <li>
+                <a href="/News/Index/2">
                     <i><img src="/images/grids_icon_07.png"></i>
                     <p>资讯</p>
-                </a></li>
-            <li><a href="javascript:;">
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
                     <i><img src="/images/grids_icon_08.png"></i>
                     <p>App</p>
-                </a></li>
+                </a>
+            </li>
             <div style="clear:both;"></div>
         </ul>
         <ul class="hdNav_cai">
@@ -331,4 +347,6 @@
         <p class="hjc_ftcopy">© 2016 皇家直播1369p.me 版权所有</p>
     </footer>
 </body>
+
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
