--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/LotteryTime.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/LotteryTime.cshtml
@@ -44,7 +44,7 @@
             type: "GET",
             url: '/js/opendate.json',
             async: false,
-            success: function(data) {
+            success: function (data) {
                 daTa = data;
             }
         });
@@ -52,4 +52,5 @@
     </script>
 </body>
 
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
