--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsGalleryCategoryList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsGalleryCategoryList.cshtml
@@ -19,94 +19,96 @@
 
 }
 
-    <!--显示点击的是哪一个字母-->
-    <div id="showLetter" class="showLetter iconfont"><span>A</span></div>
-    <!--索引查询-->
-    <div class="letter">
-        <ul>
-            <li><a class="iconfont toSearch" href="javascript:;">&#xe901;</a></li>
-            @if (letterList != null)
+<!--显示点击的是哪一个字母-->
+<div id="showLetter" class="showLetter iconfont"><span>A</span></div>
+<!--索引查询-->
+<div class="letter">
+    <ul>
+        <li><a class="iconfont toSearch" href="javascript:;">&#xe901;</a></li>
+        @if (letterList != null)
+        {
+            foreach (var item in letterList)
             {
-                foreach (var item in letterList)
-                {
-                    <li><a href="javascript:;" data-id="@item">@item</a></li>
-                }
+                <li><a href="javascript:;" data-id="@item">@item</a></li>
             }
-            @if (otherTypeList != null && otherTypeList.Count > 0)
+        }
+        @if (otherTypeList != null && otherTypeList.Count > 0)
+        {
+            <li><a href="javascript:;" data-id="other">#</a></li>
+        }
+    </ul>
+</div>
+<div class="gallery-recommend">
+    <ul>
+        @{
+            var recommendGalleryList = ViewBag.RecommendGalleryList as List<Gallery>;
+        }
+        @if (recommendGalleryList != null)
+        {
+            foreach (var gallery in recommendGalleryList)
             {
-                <li><a href="javascript:;" data-id="other">#</a></li>
-            }
-        </ul>
-    </div>
-    <div class="gallery-recommend">
-        <ul>
-            @{
-                var recommendGalleryList = ViewBag.RecommendGalleryList as List<Gallery>;
-            }
-            @if (recommendGalleryList != null)
-            {
-                foreach (var gallery in recommendGalleryList)
-                {
-                    <li class="subscript-container">
-                        <div class="subscript">推荐</div>
-                        <a href="/News/Gallery/@gallery.Id">
+                <li class="subscript-container">
+                    <div class="subscript">推荐</div>
+                    <a href="/News/Gallery/@gallery.Id">
 
-                            <img src="@gallery.Picture" alt="" />
+                        <img src="@gallery.Picture" alt="" />
+                    </a>
+                </li>
+            }
+        }
+        <div class="clearfix"></div>
+    </ul>
+</div>
+<div class="gallery-search">
+
+    <input id="searchinput" name="keyword" type="search" class="iconfont" placeholder="&#xe901;搜索" />
+
+</div>
+<div class="container">
+    <div class="gallery box">
+        @if (typeList != null)
+        {
+            foreach (var dict in dictType)
+            {
+                if (dict.Any())
+                {
+                    <div class="gallery-list">
+                        <span class="gallery-letter" id='@string.Format("{0}1", @dict.Key)'>@dict.Key</span>
+
+                        @foreach (var m in dict)
+                        {
+
+                            <p data-id="@m.Id" data-pinyin="@m.SimpleSpelling" data-name="@m.Name">
+                                <a href="/News/Gallery/@m.Id" title="@m.Name">
+                                    <span>@m.LastIssue</span>
+                                    <span class="gallery-name">@m.Name</span>
+                                </a>
+                            </p>
+                        }
+                        <div class="clearfix"></div>
+                    </div>
+                }
+
+            }
+        }
+
+        @if (otherTypeList != null && otherTypeList.Count > 0)
+        {
+            <div class="gallery-list">
+                <span class="gallery-letter" id='other1'>#</span>
+                @foreach (var m in otherTypeList)
+                {
+                    <p data-id="@m.Id" data-pinyin="@m.SimpleSpelling" data-name="@m.Name">
+                        <a href="/News/Gallery/@m.Id" title="@m.Name">
+                            <span>@m.LastIssue</span>
+                            <span class="gallery-name">@m.Name</span>
                         </a>
-                    </li>
+                    </p>
                 }
-            }
-            <div class="clearfix"></div>
-        </ul>
+                <div class="clearfix"></div>
+            </div>
+        }
     </div>
-    <div class="gallery-search">
+</div>
 
-        <input id="searchinput" name="keyword" type="search" class="iconfont" placeholder="&#xe901;搜索" />
-
-    </div>
-    <div class="container">
-        <div class="gallery box">
-            @if (typeList != null)
-            {
-                foreach (var dict in dictType)
-                {
-                    if (dict.Any())
-                    {
-                        <div class="gallery-list">
-                            <span class="gallery-letter" id='@string.Format("{0}1", @dict.Key)'>@dict.Key</span>
-
-                            @foreach (var m in dict)
-                            {
-                                
-                                    <p data-id="@m.Id" data-pinyin="@m.SimpleSpelling" data-name="@m.Name">
-                                        <a href="/News/Gallery/@m.Id" title="@m.Name">
-                                            <span>@m.LastIssue</span>
-                                            <span class="gallery-name">@m.Name</span>
-                                        </a>
-                                    </p>
-                            }
-                            <div class="clearfix"></div>
-                        </div>
-                    }
-
-                }
-            }
-
-            @if (otherTypeList != null && otherTypeList.Count>0 )
-            {
-                <div class="gallery-list">
-                    <span class="gallery-letter" id='other1'>#</span>
-                    @foreach (var m in otherTypeList)
-                    {
-                        <p data-id="@m.Id" data-pinyin="@m.SimpleSpelling" data-name="@m.Name">
-                            <a href="/News/Gallery/@m.Id" title="@m.Name">
-                                <span>@m.LastIssue</span>
-                                <span class="gallery-name">@m.Name</span>
-                            </a>
-                        </p>
-                    }
-                    <div class="clearfix"></div>
-                </div>
-            }
-        </div>
-    </div>
+@{Html.RenderAction("index", "PvUvIp");}
