--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/InvitationReg.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/InvitationReg.cshtml
@@ -81,7 +81,7 @@
         var uid=vData["uid"];
         var host = window.location.host + "/Home/Register/"+uid;
         var img = window.location.host + "/images/c8.png";
- 
+
         var shareData = {
             title: '邀请注册',
             desc: '万彩吧，助你壕梦成真！！新用户注册有惊喜',
@@ -113,7 +113,8 @@
             })
         }
     </script>
-  
+
 </body>
 
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
