--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TaskRule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TaskRule.cshtml
@@ -27,9 +27,11 @@
         <p class="Rule_font2">用户日常完成充值任务均可获得奖励，充值满100元即可获得10金币，每日奖励上限为1次。</p>
         <p class="Rule_font1">2、邀请成功注册（0/8）</p>
         <p class="Rule_font2">用户日常完成邀请好友并且成功注册，邀请成功满8次即可获得1金币，每日奖励上限为1次。</p>
-     
+
     </div>
 
 </body>
+
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
 
