--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/UserCenter.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/UserCenter.cshtml
@@ -141,4 +141,6 @@
     <script type="text/javascript" src="/js/luo/personal.usercenter.js"></script>
 
 </body>
+
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
