--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Voucher.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Voucher.cshtml
@@ -14,12 +14,10 @@
     <script type="text/javascript" src="~/js/jquery.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
     <script>
-        $(function ()
-        {
+        $(function () {
             getlist(0);
 
-            $(".My_KJHeader li").click(function ()
-            {
+            $(".My_KJHeader li").click(function () {
                 var type = $(this).attr("data-type")
                 getlist(type)
             });
@@ -30,31 +28,29 @@
                 {
                     type: type
                 },
-              function (data) {
+                function (data) {
 
-                  if (data.Success == true) {
-                      console.log(data.data);
-                      if (data.data.length == 0)
-                      {
-                          $(".My_KaJuanK").html('<div class="mescroll-empty"><img class="empty-icon" src="/images/null.png"><p class="empty-tip">暂无卡券~</p></div>');
-                      } else
-                      {
-                          buildHtml(data.data, type);
-                      }
-                  
+                    if (data.Success == true) {
+                        console.log(data.data);
+                        if (data.data.length == 0) {
+                            $(".My_KaJuanK").html('<div class="mescroll-empty"><img class="empty-icon" src="/images/null.png"><p class="empty-tip">暂无卡券~</p></div>');
+                        } else {
+                            buildHtml(data.data, type);
+                        }
 
-                  } else {
-                      alertmsg(data.Msg);
-                  }
 
-              });
+                    } else {
+                        alertmsg(data.Msg);
+                    }
+
+                });
         }
 
- 
+
 
 
         /* 获取日期时间格式*/
-        function ChangeDateFormat(dateStr,type) {
+        function ChangeDateFormat(dateStr, type) {
             var date = eval('new ' + dateStr.substr(1, dateStr.length - 2));
             var year = date.getFullYear();
             var month = date.getMonth() + 1;
@@ -68,11 +64,11 @@
                 return conver(year) + "-" + conver(month) + "-" + conver(day) + " " + conver(hh) + ":" + conver(mm) + ":" + conver(ss);
 
             }
-            
+
 
         }
         function DateDiff(sDate1, sDate2) {  //sDate1和sDate2是yyyy-MM-dd格式
-           
+
             var aDate, oDate1, oDate2, iDays;
             aDate = sDate1.split("-");
             oDate1 = new Date(aDate[1] + '-' + aDate[2] + '-' + aDate[0]);  //转换为yyyy-MM-dd格式
@@ -107,75 +103,68 @@
             var now = year + '-' + conver(month) + "-" + conver(date);
             return now;
         }
-     
 
-        function buildHtml(data, type)
-        {
+
+        function buildHtml(data, type) {
             var html = [];
-           
+
             var img1 = '';
             var img2 = '';
             var img3 = '';
             var dhtml = '';
             var t = getDate();
             var text = '';
-            $.each(data, function (index, value)
-            {
-                
-              
-                var day = DateDiff(ChangeDateFormat(value.EndTime,1), t);
-               
-                
-                if (type == 0)
-                {
+            $.each(data, function (index, value) {
+
+
+                var day = DateDiff(ChangeDateFormat(value.EndTime, 1), t);
+
+
+                if (type == 0) {
                     img1 = '<img src="/images/w3_1.png">';
-                    if (day==1)
-                    {
-                        
+                    if (day == 1) {
+
                         img2 = '<img src="/images/w4_1.png">';
                     }
 
-                } else if (type == 1)
-                {
+                } else if (type == 1) {
 
                     img1 = '<img src="/images/w3_2.png">';
                     img2 = '<img src="/images/w4_3.png">';
-                } else if (type == 2)
-                {
+                } else if (type == 2) {
                     img1 = '<img src="/images/w3_2.png">'
                     img2 = '<img src="/images/w4_2.png">';
                 }
-                if (value.FromType == 1)
-                {
-                    text="新用户注册"
+                if (value.FromType == 1) {
+                    text = "新用户注册"
                 } else {
                     text = "邀请用户注册"
                 }
 
-                dhtml ='<div class="KaJuanInfo"><div class="KJI_Top">'
-                 + '<div class="KJI_Ttu">' + img2 + '</div><dl class="KJI_Tdl">'
+                dhtml = '<div class="KaJuanInfo"><div class="KJI_Top">'
+                    + '<div class="KJI_Ttu">' + img2 + '</div><dl class="KJI_Tdl">'
                     + '<dt>' + img1 + '</dt>'
                     + '<dd>'
                     + '<h3>查看券</h3>'
-                    + '<p>有效期至：' + ChangeDateFormat(value.BeginTime,2) + ' - ' + ChangeDateFormat(value.EndTime,2) + '</p>'
+                    + '<p>有效期至：' + ChangeDateFormat(value.BeginTime, 2) + ' - ' + ChangeDateFormat(value.EndTime, 2) + '</p>'
                     + '</dd></dl></div>'
-              + '<div class="KJI_Bt">'
-                + '<div class="KJI_Btu KJI_BtuL"><img src="/images/w2_1.png"></div>'
-                 + '<div class="KJI_Btu KJI_BtuR"><img src="/images/w2_2.png"></div>'
-                + '<p class="KJI_BtFont">查看券来源于' + text + '成功可获取1张查看券，查看券当天有效，过期无效</p></div></div>'
-      
-         
+                    + '<div class="KJI_Bt">'
+                    + '<div class="KJI_Btu KJI_BtuL"><img src="/images/w2_1.png"></div>'
+                    + '<div class="KJI_Btu KJI_BtuR"><img src="/images/w2_2.png"></div>'
+                    + '<p class="KJI_BtFont">查看券来源于' + text + '成功可获取1张查看券，查看券当天有效，过期无效</p></div></div>'
 
-       
-             html.push(dhtml);
+
+
+
+                html.push(dhtml);
 
             });
-          
+
             $(".My_KaJuanK").html(html.join(''));
 
         }
 
-        
+
 
     </script>
 </head>
@@ -197,11 +186,11 @@
 
     <div class="My_KaJuanBox">
         <div class="My_KaJuanK">
-        
-        
-   
+
+
+
         </div>
-    
+
     </div>
 
     <div class="KJ_YQ">
@@ -210,4 +199,5 @@
 
 </body>
 
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
