--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/BlackList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/BlackList.cshtml
@@ -59,27 +59,27 @@
                 <ul class="ul_blacklist">
                     @*<li>
 
-                        <img src="/img/pic_profile_1.png" />
+                            <img src="/img/pic_profile_1.png" />
 
-                        <span>兜风单车</span>
+                            <span>兜风单车</span>
 
-                        <input type="button" value="解禁" />
+                            <input type="button" value="解禁" />
 
-                    </li>
-                    <li>
-                        <img src="/img/pic_profile_1.png" />
+                        </li>
+                        <li>
+                            <img src="/img/pic_profile_1.png" />
 
-                        <span>兜风单车</span>
+                            <span>兜风单车</span>
 
-                        <input type="button" value="解禁" />
-                    </li>
-                    <li>
-                        <img src="/img/pic_profile_1.png" />
+                            <input type="button" value="解禁" />
+                        </li>
+                        <li>
+                            <img src="/img/pic_profile_1.png" />
 
-                        <span>兜风单车</span>
+                            <span>兜风单车</span>
 
-                        <input type="button" value="解禁" />
-                    </li>*@
+                            <input type="button" value="解禁" />
+                        </li>*@
                 </ul>
         </article>
     </div>
@@ -148,4 +148,6 @@
         }
     </script>
 </body>
+
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
