--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/Index.cshtml
@@ -22,91 +22,91 @@
     </header>
     <div class="hjc_chatroom">
         <ul class="chatroom_ul">
-          
+
             @* <li>
-            <a href="/Talking/ChatRoom/2">
-                <i><img src="/images/icon_chatroom_02.png"></i>
-                <p>答题聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/3">
-                <i><img src="/images/icon_chatroom_03.png"></i>
-                <p>双色球聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/4">
-                <i><img src="/images/icon_chatroom_04.png"></i>
-                <p>福彩3D聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/5">
-                <i><img src="/images/icon_chatroom_05.png"></i>
-                <p>排列三聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/6">
-                <i><img src="/images/icon_chatroom_06.png"></i>
-                <p>排列五聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/7">
-                <i><img src="/images/icon_chatroom_07.png"></i>
-                <p>六合彩聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/8">
-                <i><img src="/images/icon_chatroom_08.png"></i>
-                <p>十一选五聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/9">
-                <i><img src="/images/icon_chatroom_09.png"></i>
-                <p>快乐十分聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/10">
-                <i><img src="/images/icon_chatroom_10.png"></i>
-                <p>时时彩聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/11">
-                <i><img src="/images/icon_chatroom_11.png"></i>
-                <p>快三聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/12">
-                <i><img src="/images/icon_chatroom_12.png"></i>
-                <p>幸运飞艇聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/13">
-                <i><img src="/images/icon_chatroom_13.png"></i>
-                <p>北京赛车聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/14">
-                <i><img src="/images/icon_chatroom_14.png"></i>
-                <p>七星彩聊天室</p>
-            </a>
-        </li>
-        <li>
-            <a href="/Talking/ChatRoom/15">
-                <i><img src="/images/icon_chatroom_15.png"></i>
-                <p>七乐彩聊天室</p>
-            </a>
-        </li>*@
+                    <a href="/Talking/ChatRoom/2">
+                        <i><img src="/images/icon_chatroom_02.png"></i>
+                        <p>答题聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/3">
+                        <i><img src="/images/icon_chatroom_03.png"></i>
+                        <p>双色球聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/4">
+                        <i><img src="/images/icon_chatroom_04.png"></i>
+                        <p>福彩3D聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/5">
+                        <i><img src="/images/icon_chatroom_05.png"></i>
+                        <p>排列三聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/6">
+                        <i><img src="/images/icon_chatroom_06.png"></i>
+                        <p>排列五聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/7">
+                        <i><img src="/images/icon_chatroom_07.png"></i>
+                        <p>六合彩聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/8">
+                        <i><img src="/images/icon_chatroom_08.png"></i>
+                        <p>十一选五聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/9">
+                        <i><img src="/images/icon_chatroom_09.png"></i>
+                        <p>快乐十分聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/10">
+                        <i><img src="/images/icon_chatroom_10.png"></i>
+                        <p>时时彩聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/11">
+                        <i><img src="/images/icon_chatroom_11.png"></i>
+                        <p>快三聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/12">
+                        <i><img src="/images/icon_chatroom_12.png"></i>
+                        <p>幸运飞艇聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/13">
+                        <i><img src="/images/icon_chatroom_13.png"></i>
+                        <p>北京赛车聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/14">
+                        <i><img src="/images/icon_chatroom_14.png"></i>
+                        <p>七星彩聊天室</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/ChatRoom/15">
+                        <i><img src="/images/icon_chatroom_15.png"></i>
+                        <p>七乐彩聊天室</p>
+                    </a>
+                </li>*@
             <div style="clear:both;"></div>
         </ul>
     </div>
@@ -117,7 +117,7 @@
                     var lis = "";
                     $(data).each(function () {
                         lis += "<li>"
-                        lis += "   <a href='/Talking/ChatRoom?roomId=" + this.Id + "&roomName=" + this.Name+"'>"
+                        lis += "   <a href='/Talking/ChatRoom?roomId=" + this.Id + "&roomName=" + this.Name + "'>"
                         lis += "       <i><img src='" + this.LogoPath + "'></i>"
                         lis += "       <p>" + this.Name + "</p>"
                         lis += "   </a>"
@@ -129,4 +129,5 @@
         });
     </script>
 </body>
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
