--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Login.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Login.cshtml
@@ -12,24 +12,23 @@
     <script src="~/js/jquery-1.8.3.min.js"></script>
     <script src="~/js/dialog.min.js"></script>
     <script src="~/js/yjp.js"></script>
-  
+
     <script>
-        $(function () {          
+        $(function () {
             login();
         });
 
         function login() {
-            $("#btnlogin").click(function ()
-            {
+            $("#btnlogin").click(function () {
                 var mobile = $("#mobile").val();
                 var password = $("#password").val();
                 if (mobile.length == 0) {
-               
+
                     alertmsg("手机号不能为空");
                     return false;
                 }
                 if (password.length == 0) {
-             
+
                     alertmsg("密码不能为空");
                     return false;
                 }
@@ -37,15 +36,15 @@
                     if (data.Success != true) {
                         alertmsg(data.Msg);
 
-                    } else {                       
-                            location.href = '/Personal/Index'//跳转地址        
+                    } else {
+                        location.href = '/Personal/Index'//跳转地址
                     }
 
                 });
 
 
             })
-           
+
 
         }
 
@@ -79,7 +78,7 @@
         </div>
         <div class="DL_info2">
             <input type="button" id="btnlogin" class="DL_if2btn" value="登录">
-            <a href="/Home/Register" class="DL_if2a" >新用户注册</a>
+            <a href="/Home/Register" class="DL_if2a">新用户注册</a>
         </div>
         <div class="DL_info3">
             <a href="/Home/SetPassword">忘记密码？</a>
@@ -90,7 +89,7 @@
     </div>
 
     <!--弹窗  手机号不能为空-->
-    <div  class="login_popup" style="display:none;">
+    <div class="login_popup" style="display:none;">
         <div class="login_tel">
             <p class="tel_p"></p>
             <a href="javascript:;" class="tel_a">确定</a>
@@ -98,4 +97,6 @@
     </div>
 
 </body>
+
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
