--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
@@ -2,26 +2,25 @@
     ViewBag.Title = "SetPassword";
 }
 <!doctype html>
-        <html>
-        <head>
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-            <title>设置密码-万彩吧_快3_11选5_快乐10分_3d_彩票开奖查询</title>
-            <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-     
-            <script src="~/js/jquery-1.8.3.min.js"></script>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+    <title>设置密码-万彩吧_快3_11选5_快乐10分_3d_彩票开奖查询</title>
+    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
 
-            <link href="~/css/dialog.css" rel="stylesheet" />
-            <script src="~/js/dialog.min.js"></script>
-            <script src="~/js/yjp.js"></script>
-            <script>
+    <script src="~/js/jquery-1.8.3.min.js"></script>
+
+    <link href="~/css/dialog.css" rel="stylesheet" />
+    <script src="~/js/dialog.min.js"></script>
+    <script src="~/js/yjp.js"></script>
+    <script>
         $(function () {
             set();
         });
 
         function set() {
-            $("#btnsub").click(function ()
-            {
+            $("#btnsub").click(function () {
                 var password1 = $("#password1").val();
                 var password2 = $("#password2").val();
                 if (password1.length == 0) {
@@ -40,7 +39,7 @@
                     alertmsg("两次密码不一致，请重新输入");
                     return false;
                 }
-                $.post('/Home/SetPw', { password: password2}, function (data) {
+                $.post('/Home/SetPw', { password: password2 }, function (data) {
 
                     if (data.Success != true) {
                         alertmsg(data.Msg);
@@ -56,53 +55,55 @@
             }
             );
         }
-      
 
-            </script>
-        </head>
 
-        <body style="background:#F4F4F5;">
+    </script>
+</head>
 
-            <header class="hjc_header">
-                <a href="javascript:history.go(-1);" class="hjc_back"></a>
-                <a href="javascript:;" class="hjc_logo"><img src="~/images/03.png"></a>
-            </header>
+<body style="background:#F4F4F5;">
 
-            <div class="DL_main">
-                <div class="DL_info1">
-                    <ul class="DL_if1UL">
-                        <li>
-                            <p class="DL_icon DL_icon2 f-l"></p>
-                            <div class="UL_kuai1">
-                                <input type="password" id="password1" placeholder="输入密码" class="DL_ipt1">
-                            </div>
-                        </li>
-                        <li>
-                            <p class="DL_icon DL_icon2 f-l"></p>
-                            <div class="UL_kuai1">
-                                <input type="password" id="password2" placeholder="请再次输入密码" class="DL_ipt1">
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="DL_info2">
-                    <input type="button" id="btnsub" class="DL_if2btn" value="提交">
-                </div>
-             
-                <!--<div class="DL_info4">
-                客服热线：<a href="javascript:;">4009-9798-38</a>&nbsp;&nbsp;&nbsp;<a href="javascript:;">在线客服</a>
-            </div>-->
-            </div>
+    <header class="hjc_header">
+        <a href="javascript:history.go(-1);" class="hjc_back"></a>
+        <a href="javascript:;" class="hjc_logo"><img src="~/images/03.png"></a>
+    </header>
 
-            <!--弹窗  手机号不能为空-->
-            <div class="login_popup" style="display:none;">
-                <div class="login_tel">
-                    <p class="tel_p">手机号不能为空</p>
-                    <a href="javascript:;" class="tel_a">确定</a>
-                </div>
-            </div>
+    <div class="DL_main">
+        <div class="DL_info1">
+            <ul class="DL_if1UL">
+                <li>
+                    <p class="DL_icon DL_icon2 f-l"></p>
+                    <div class="UL_kuai1">
+                        <input type="password" id="password1" placeholder="输入密码" class="DL_ipt1">
+                    </div>
+                </li>
+                <li>
+                    <p class="DL_icon DL_icon2 f-l"></p>
+                    <div class="UL_kuai1">
+                        <input type="password" id="password2" placeholder="请再次输入密码" class="DL_ipt1">
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="DL_info2">
+            <input type="button" id="btnsub" class="DL_if2btn" value="提交">
+        </div>
 
-        </body>
-    </html>
+        <!--<div class="DL_info4">
+            客服热线：<a href="javascript:;">4009-9798-38</a>&nbsp;&nbsp;&nbsp;<a href="javascript:;">在线客服</a>
+        </div>-->
+    </div>
+
+    <!--弹窗  手机号不能为空-->
+    <div class="login_popup" style="display:none;">
+        <div class="login_tel">
+            <p class="tel_p">手机号不能为空</p>
+            <a href="javascript:;" class="tel_a">确定</a>
+        </div>
+    </div>
+
+</body>
+
+@{Html.RenderAction("index", "PvUvIp");}
+</html>
 
  
