--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
@@ -25,39 +25,39 @@
     <div class="hjc_indexmain" style="margin-top:50px;">
         <ul class="list_mainUl2 ranking">
             @*<li>
-                <div class="UL2_hd">
-                    <a href="/List/New">
-                        <div class="UL2_hdtu f-l"><img src="/images/ranking_icon_01.png"></div>
-                        <div class="UL2_hdtit">
-                            <h3>最新榜</h3>
-                            <div class="rating">
-                                <span>推荐指数：</span>
-                                <span>
-                                    <i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i>
-                                </span>
+                    <div class="UL2_hd">
+                        <a href="/List/New">
+                            <div class="UL2_hdtu f-l"><img src="/images/ranking_icon_01.png"></div>
+                            <div class="UL2_hdtit">
+                                <h3>最新榜</h3>
+                                <div class="rating">
+                                    <span>推荐指数：</span>
+                                    <span>
+                                        <i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i>
+                                    </span>
+                                </div>
                             </div>
-                        </div>
-                        <span class="UL2_hdicon"></span>
-                    </a>
-                </div>
-            </li>
-            <li>
-                <div class="UL2_hd">
-                    <a href="javascript:;">
-                        <div class="UL2_hdtu f-l"><img src="/images/ranking_icon_02.png"></div>
-                        <div class="UL2_hdtit">
-                            <h3>连中榜</h3>
-                            <div class="rating">
-                                <span>推荐指数：</span>
-                                <span>
-                                    <i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i>
-                                </span>
+                            <span class="UL2_hdicon"></span>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="UL2_hd">
+                        <a href="javascript:;">
+                            <div class="UL2_hdtu f-l"><img src="/images/ranking_icon_02.png"></div>
+                            <div class="UL2_hdtit">
+                                <h3>连中榜</h3>
+                                <div class="rating">
+                                    <span>推荐指数：</span>
+                                    <span>
+                                        <i class="icon_star"></i><i class="icon_star"></i><i class="icon_star"></i>
+                                    </span>
+                                </div>
                             </div>
-                        </div>
-                        <span class="UL2_hdicon"></span>
-                    </a>
-                </div>
-            </li>*@
+                            <span class="UL2_hdicon"></span>
+                        </a>
+                    </div>
+                </li>*@
             <li>
                 <div class="UL2_hd">
                     <a href="/List/Integral">
@@ -127,25 +127,26 @@
                 </div>
             </li>
             @*<li>
-                <div class="UL2_hd">
-                    <a href="javascript:;">
-                        <div class="UL2_hdtu f-l"><img src="/images/ranking_icon_07.png"></div>
-                        <div class="UL2_hdtit">
-                            <h3>答题榜</h3>
-                            <div class="rating">
-                                <span>推荐指数：</span>
-                                <span>
-                                    <i class="icon_star"></i>
-                                </span>
+                    <div class="UL2_hd">
+                        <a href="javascript:;">
+                            <div class="UL2_hdtu f-l"><img src="/images/ranking_icon_07.png"></div>
+                            <div class="UL2_hdtit">
+                                <h3>答题榜</h3>
+                                <div class="rating">
+                                    <span>推荐指数：</span>
+                                    <span>
+                                        <i class="icon_star"></i>
+                                    </span>
+                                </div>
                             </div>
-                        </div>
-                        <span class="UL2_hdicon"></span>
-                    </a>
-                </div>
-            </li>*@
+                            <span class="UL2_hdicon"></span>
+                        </a>
+                    </div>
+                </li>*@
         </ul>
     </div>
 
 </body>
 
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
