--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -44,15 +44,15 @@
     <link rel="stylesheet" href="~/css/dropload.css" />
     <link rel="stylesheet" type="text/css" href="~/css/dialog.css" />
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="~/css/c8-icon.css"/>
+    <link rel="stylesheet" type="text/css" href="~/css/c8-icon.css" />
     <script type="text/javascript" src="~/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="~/js/luo/dropload.js"></script>
     <script type="text/javascript" src="~/js/dialog.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
-    
+
     <script type="text/javascript" src="~/js/runTime2.js"></script>
-    
-    
+
+
 
 </head>
 
@@ -478,4 +478,6 @@
         }
     </script>
 </body>
+
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
