--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
@@ -51,7 +51,7 @@
                                     <i data-id="@comment.Id" data-ctype="1" data-commenttype="@comment.Type"><img src="/images/46_1.png" class="DZ_tu1"><img src="/images/46_2.png" class="DZ_tu2"></i>
 
                                 }
-                             
+
                                 @if (comment.StarCount > 0)
                                 {
                                     <span>@comment.StarCount</span>
@@ -88,3 +88,4 @@
     <a href="/Comment/Index/@ViewBag.ArticleId?ctype=1&type=@ViewBag.Type" class="Gues_ftFBPL">请输入您的评论</a>
 </div>
 
+@{Html.RenderAction("index", "PvUvIp");}
