--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/ModifyPassword.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/ModifyPassword.cshtml
@@ -17,13 +17,11 @@
 
         $(function () {
             modiflypwd();
-          
+
         });
 
-        function modiflypwd()
-        {
-            $("#btnconfirm").click(function ()
-            {
+        function modiflypwd() {
+            $("#btnconfirm").click(function () {
                 var oldpwd = $("#oldpwd").val();
                 var newpwd = $("#newpwd").val();
                 var cfnewpwd = $("#cfnewpwd").val();
@@ -56,7 +54,7 @@
                 });
 
             });
-         
+
 
         }
 
@@ -84,5 +82,7 @@
 
 
 </body>
+
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
 
