--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyAchievement.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyAchievement.cshtml
@@ -30,9 +30,9 @@
             var dataname = "全部";
             var _ltype = index;
             $(".wrapper-container .Grades_" + index).show().siblings().hide();
-            var dh = $(document.body).height() - $(".gaoshou").height() - $(".Grades_TopNav").height()-90;
+            var dh = $(document.body).height() - $(".gaoshou").height() - $(".Grades_TopNav").height() - 90;
             $(".Grades_CBInfo").height(dh);
-           
+
 
             var curNavIndex = "110";
             var mescrollArr = new Array(length);
@@ -106,7 +106,7 @@
                 var cid = _this.attr("data-cid");
 
                 _this.addClass("current").siblings().removeClass("current");
-                $(".wrapper-container .Grades_"+cid+ _index).show().siblings().hide();
+                $(".wrapper-container .Grades_" + cid + _index).show().siblings().hide();
 
                 pager(_this)
             });
@@ -114,7 +114,7 @@
 
             function pager(obj) {
                 var _this = $(obj),
-                i = _this.attr("data-idx");
+                    i = _this.attr("data-idx");
 
                 _ltype = _this.attr("data-ltype");
 
@@ -262,64 +262,51 @@
                         var issym = item.BettingRecord[j].WinState == 3 ? "+" : "";
                         var redwin = '';
                         var mynum = item.BettingRecord[j].BetNum;
-                     
-                        if (item.BettingRecord[j].WinState == 3)
-                        {
+
+                        if (item.BettingRecord[j].WinState == 3) {
                             var mynum = item.BettingRecord[j].BetNum;
                             var mynumsplit = item.BettingRecord[j].BetNum.split(',');
-                         
-                            for (var x = 0; x < mynumsplit.length; x++)
-                            {
+
+                            for (var x = 0; x < mynumsplit.length; x++) {
                                 var z = getwanfa(item.BettingRecord[j].PlayName);
-                                
-                                if (z == -1)
-                                {
+
+                                if (z == -1) {
                                     var ltnum = item.LotteryNum.Num;
-                               
-                                    if (item.BettingRecord[j].PlayName == "平特一肖")
-                                    {
+
+                                    if (item.BettingRecord[j].PlayName == "平特一肖") {
                                         ltnum = getShengxiaoByDigit(item.LotteryNum.Num);
                                     }
 
-                                    if (ltnum.indexOf(mynumsplit[x]) >= 0)
-                                    {
-                                       
+                                    if (ltnum.indexOf(mynumsplit[x]) >= 0) {
+
                                         mynum = mynum.replace(mynumsplit[x], "<span class='For_Red'>" + mynumsplit[x] + "</span>");
                                     }
-                                } else
-                                {
+                                } else {
                                     var lonum = item.LotteryNum.Num.split(',');
-                              
-                                    if (item.BettingRecord[j].PlayName == "四肖中特" || item.BettingRecord[j].PlayName == "六肖中特")
-                                    {
+
+                                    if (item.BettingRecord[j].PlayName == "四肖中特" || item.BettingRecord[j].PlayName == "六肖中特") {
                                         lonum[z] = getShengxiaoByDigit(lonum[z]);
                                     }
-                                    if (z==10)
-                                    {
+                                    if (z == 10) {
                                         var lonum1 = lonum.slice(0, 6);
-                                     
-                                        if ($.inArray(mynumsplit[x], lonum1) != -1)
-                                        {
-                                            mynum = mynum.replace(mynumsplit[x], "<span class='For_Red'>" + mynumsplit[x] + "</span>");
-                                        }
-                                    
-                                    } else if (z == 11)
-                                    {
-                                        var lonum1 = lonum.slice(0, 5);
-                                        if ($.inArray(mynumsplit[x], lonum1) != -1)
-                                        {
-                                            mynum = mynum.replace(mynumsplit[x], "<span class='For_Red'>" + mynumsplit[x] + "</span>");
-                                        }
-                                    }else if(z==12)
-                                    {
-                                        var lonum1 = lonum.slice(5);
-                                       
+
                                         if ($.inArray(mynumsplit[x], lonum1) != -1) {
                                             mynum = mynum.replace(mynumsplit[x], "<span class='For_Red'>" + mynumsplit[x] + "</span>");
                                         }
 
-                                    }else
-                                    {
+                                    } else if (z == 11) {
+                                        var lonum1 = lonum.slice(0, 5);
+                                        if ($.inArray(mynumsplit[x], lonum1) != -1) {
+                                            mynum = mynum.replace(mynumsplit[x], "<span class='For_Red'>" + mynumsplit[x] + "</span>");
+                                        }
+                                    } else if (z == 12) {
+                                        var lonum1 = lonum.slice(5);
+
+                                        if ($.inArray(mynumsplit[x], lonum1) != -1) {
+                                            mynum = mynum.replace(mynumsplit[x], "<span class='For_Red'>" + mynumsplit[x] + "</span>");
+                                        }
+
+                                    } else {
                                         if (lonum[z] == mynumsplit[x]) {
                                             console.log("中了")
 
@@ -327,15 +314,15 @@
 
                                         }
                                     }
-                                  
-                                  
+
+
                                 }
-                             
+
                             }
                         }
                         bethtml += '<tr><td align="center" valign="middle" width="25%"><p>' + item.BettingRecord[j].PlayName + '</p> </td>'
-                        + ' <td align="center" valign="middle"  width="25%">  <p style="word-break:break-all; ">' + mynum + '<span class="For_Red"></span></p> </td>'
-                        + '<td align="center" valign="middle" width="25%"> <p class="' + cliswin + '">    <font class="P_TF">' + iswin + '</font><span>' + issym + '' + item.BettingRecord[j].Score + '</span></p>  </td> </tr>'
+                            + ' <td align="center" valign="middle"  width="25%">  <p style="word-break:break-all; ">' + mynum + '<span class="For_Red"></span></p> </td>'
+                            + '<td align="center" valign="middle" width="25%"> <p class="' + cliswin + '">    <font class="P_TF">' + iswin + '</font><span>' + issym + '' + item.BettingRecord[j].Score + '</span></p>  </td> </tr>'
                     }
                 }
                 kjhtml1 = '';
@@ -344,8 +331,7 @@
                     var cl = "hdM_spssc";
                     //   console.log(item.BettingRecord[i].lType);
 
-                    if (ltype == 5)
-                    {
+                    if (ltype == 5) {
                         cl1 = "Forecast_LHC";
                         var color = getcolor(num[i]);
 
@@ -360,12 +346,10 @@
                         }
                         //   kjhtml1 += '<span class="LHC_spA">' + num[i] + '</span>'
 
-                        if (i == num.length - 2)
-                        {
+                        if (i == num.length - 2) {
                             kjhtml1 += '<span class="LHC_spA">' + getShengxiaoByDigit(num[i]) + '+</span>'
                             kjhtml += '<span class="' + cl + '">' + num[i] + '</span><span>+</span>'
-                        } else
-                        {
+                        } else {
                             kjhtml1 += '<span class="LHC_spA">' + getShengxiaoByDigit(num[i]) + '</span>'
                             kjhtml += '<span class="' + cl + '">' + num[i] + '</span>'
                         }
@@ -376,11 +360,11 @@
 
                 }
                 var itemHtml = '<table class="Forecast_tableA" width="100%" bordercolor="#ccc" border="1"> <tr>'
-                + ' <td align="center" valign="middle"> <p class="Forecast_Ptit">' + item.LotteryNum.Issue + '期</p>'
-                + '    <p class="Forecast_Ptit">' + item.LotteryNum.SubTime + '</p> </td>'
-                + ' <td colspan="2" align="left" valign="middle"> <div class="' + cl1 + '">' + kjhtml + '</div>'
-                + '<div class="Forecast_LHC">' + kjhtml1 + '</div>  </td></tr>'
-                + bethtml + '   </table>';
+                    + ' <td align="center" valign="middle"> <p class="Forecast_Ptit">' + item.LotteryNum.Issue + '期</p>'
+                    + '    <p class="Forecast_Ptit">' + item.LotteryNum.SubTime + '</p> </td>'
+                    + ' <td colspan="2" align="left" valign="middle"> <div class="' + cl1 + '">' + kjhtml + '</div>'
+                    + '<div class="Forecast_LHC">' + kjhtml1 + '</div>  </td></tr>'
+                    + bethtml + '   </table>';
                 itemList.push(itemHtml);
             });
             var html = itemList.join('');
@@ -446,10 +430,9 @@
             return result;
         }
 
-        function getwanfa(playName)
-        {
+        function getwanfa(playName) {
             var i = -1;
-            var p0 = ["第一球五码", "冠军五码", "第一球", "冠军","第一名"];
+            var p0 = ["第一球五码", "冠军五码", "第一球", "冠军", "第一名"];
             var p1 = ["第二球五码", "第二名五码", "第二球", "亚军", "第二名", "亚军五码"];
             var p2 = ["第三球五码", "第三名五码", "第三球", "第三名"];
             var p3 = ["第四球五码", "第四名五码", "第四球", "第四名"];
@@ -462,12 +445,10 @@
             var p10 = ["红2胆", "红3胆"];
             var p11 = ["前区4码"];
             var p12 = ["后区3码"];
-            if ($.inArray(playName,p0)!=-1)
-            {
-             
+            if ($.inArray(playName, p0) != -1) {
+
                 i = 0;
-            } else if ($.inArray(playName, p1) != -1)
-            {
+            } else if ($.inArray(playName, p1) != -1) {
                 i = 1;
             } else if ($.inArray(playName, p2) != -1) {
                 i = 2;
@@ -477,8 +458,7 @@
                 i = 4;
             } else if ($.inArray(playName, p5) != -1) {
                 i = 5;
-            } else if ($.inArray(playName, p6) != -1)
-            {
+            } else if ($.inArray(playName, p6) != -1) {
                 i = 6;
             } else if ($.inArray(playName, p7) != -1) {
                 i = 7;
@@ -486,15 +466,12 @@
                 i = 8;
             } else if ($.inArray(playName, p9) != -1) {
                 i = 9;
-            } else if ($.inArray(playName, p10) != -1)
-            {
-                i=10
-            } else if ($.inArray(playName, p11) != -1)
-            {
+            } else if ($.inArray(playName, p10) != -1) {
+                i = 10
+            } else if ($.inArray(playName, p11) != -1) {
                 i = 11;
 
-            } else if ($.inArray(playName, p12) != -1)
-            {
+            } else if ($.inArray(playName, p12) != -1) {
                 i = 12;
             }
             return i;
@@ -566,9 +543,9 @@
         </div>
         <div class="hdNav_cai_expand" style="display:none">
             @*<div class="hdNav_cai_title">
-                <span>切换分类</span>
-                <span class="collect"><img src="~/images/icon-collect.png" alt="" /></span>
-            </div>*@
+                    <span>切换分类</span>
+                    <span class="collect"><img src="~/images/icon-collect.png" alt="" /></span>
+                </div>*@
             <ul class="hdNav_cai">
 
                 @if (Model.LotteryType != null)
@@ -612,12 +589,12 @@
                         </ul>
 
                     }
-                
+
                 }
 
             }
-          
-            <div style="clear:both;"></div> 
+
+            <div style="clear:both;"></div>
         </div>
         <a href="javascript:;" class="GS_btn"><img src="~/images/50.png"></a>
     </div>
@@ -640,7 +617,7 @@
 
                         @Html.Action("GetIntegralRule", "Personal", new { ltype = Convert.ToInt32(item.lType), Pid = item.PId })
 
-                      
+
                     </div>
                 }
                 else
@@ -648,7 +625,7 @@
                     <div class="Grades Grades_@name" style="display:none">
                         @Html.Action("GetIntegralRule", "Personal", new { ltype = Convert.ToInt32(item.lType), Pid = item.PId })
 
-                    
+
                     </div>
 
                 }
@@ -659,4 +636,6 @@
 
     <div class="mask" style="display:none;"></div>
 </body>
+
+@{Html.RenderAction("index", "PvUvIp");}
 </html>
